--- a/package.json
+++ b/package.json
@@ -2,13 +2,20 @@
   "name": "proyecto-pom",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
-  "scripts": {},
+  "main": "index.js", 
+  "scripts": {
+    "test": "playwright test",
+    "test:bdd": "cucumber-js --require tests/step-definitions/world.js --require tests/step-definitions/hooks.js --require tests/step-definitions/**/*.js tests/features/**/*.feature",
+    "test:ui": "playwright test --ui",
+    "test:debug": "playwright test --debug",
+    "test:report": "playwright show-report"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "type": "commonjs",
   "devDependencies": {
+    "@cucumber/cucumber": "^11.3.0",
     "@playwright/test": "^1.52.0",
     "@types/node": "^22.15.29"
   },
